# scsc

./: .gitignore  CMakeLists.txt  README.md
src/: client.cpp  clientconnection.h  echoclient.cpp  echoserver.cpp  echoserver.h  ipv4address.cpp  server.cpp  socketerror.h  sockethandle.h
src/client/: client.cpp  echoclient.cpp  echoclient.h  messengerclient.cpp  messengerclient.h
src/common/: ipv4.cpp  ipv4.h  ipv4address.cpp  ipv4address.h  port.cpp  port.h  serveraddress.cpp  serveraddress.h  sockethandle.cpp
src/server/: clientaddress.cpp  clientaddress.h  clientconnection.cpp  clientconnection.h  echoserver.cpp  echoserver.h  messengerserver.cpp  messengerserver.h  server.cpp
